# quote-macro-gen

./: .gitignore  main.py  pyproject.toml
